# awesome-plonky2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
benchmarks/: Pipfile  README.md
benchmarks/scripts/: __init__.py
benchmarks/scripts/merkle_tree/: __init__.py  bench_merkle.py
benchmarks/scripts/utils/: plotting.py
examples/: check_balance.rs  merkle_tree.rs  merkle_tree_average.rs  merkle_tree_batch.rs  power_two.rs  prove_poly.rs  square_root.rs
examples/recursion/: merkle_tree_recursive_batch.rs  merkle_tree_recursive_batch_avg.rs  merkle_tree_recursive_batch_avg_ord.rs  merkle_tree_recursive_batch_ordered.rs  merkle_tree_recursive_pairwise.rs  merkle_tree_recursive_verify.rs
examples/utils/: data.rs  metrics.rs  mod.rs
