[package]
name = "awesome-plonky2"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { version = "0.2.2", default-features = false }
anyhow = "1.0"
itertools = { version = "0.10.0", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
plonky2_util = { version = "0.2.0", default-features = false }
plonky2_field = { version = "0.2.2", default-features = false }
log = "0.4.14"
rand = "0.8.5"
psutil = "3.2.2"
bincode = "1.3"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "merkle_tree_recursive_verify"
path = "examples/recursion/merkle_tree_recursive_verify.rs"

[[example]]
name = "merkle_tree_recursive_batch"
path = "examples/recursion/merkle_tree_recursive_batch.rs"

[[example]]
name = "merkle_tree_recursive_pairwise"
path = "examples/recursion/merkle_tree_recursive_pairwise.rs"